# ph-actors-tcc

./: ACTOR.md  Cargo.toml  LICENSE  README.md
.cursor/rules/: actor-model.mdc  api-actor.mdc  codebase-overview.mdc  config-actor.mdc  conventional-commits.mdc  env-actor.mdc  fs-actor.mdc  log-actor.mdc  mailing-list-state-actor.mdc  net-actor.mdc  patch-meta-actor.mdc  references.mdc  rust.mdc  shell-actor.mdc  terminal-actor.mdc  utilities.mdc
examples/: feed_cache.rs  lore.rs  mailing_list.rs  patch_cache.rs  shell.rs  simple_feed_test.rs
monografia/latex/: README.md  tese.tex
monografia/scratches/: 01-Resumo.md  02-Fundamentação-Teorica.md  02-Fundamentação-Teórica.1.md  03-Patch-Hub.md  Actor Model.md  Index.md  Patch Hub.md  Structure.md  ToDo.md
monografia/scratches/.obsidian/: appearance.json  community-plugins.json  workspace.json
monografia/scratches/Excalidraw/: Drawing 2025-03-18 15.27.49.excalidraw.md
monografia/scratches/actor-model/: Actor Model.md  Continuation passing.md  Known implementations.md  Message.md  Proposal.md  Rust Centralized Approach.md
samples/: config.toml
src/: api.rs  app.rs  config.rs  env.rs  fs.rs  lib.rs  log.rs  macros.rs  main.rs  net.rs  render.rs  shell.rs  sys.rs  terminal.rs  utils.rs
src/api/: lore.rs
src/api/lore/: core.rs  data.rs  (+3 more)
src/app/: README.md  cache.rs  config.rs  core.rs  data.rs  message.rs  state.rs  ui.rs
src/config/: core.rs  data.rs  message.rs  tests.rs
src/env/: core.rs  message.rs  mock.rs  tests.rs
src/fs/: core.rs  message.rs  mock.rs  tests.rs
src/log/: core.rs  data.rs  message.rs  mock.rs  tests.rs
src/net/: core.rs  message.rs  mock.rs
src/render/: core.rs  message.rs  mock.rs  tests.rs
src/shell/: core.rs  data.rs  message.rs  mock.rs  tests.rs
src/terminal/: README.md  core.rs  data.rs  message.rs  mock.rs
tcc/scratches/: Functional Programming.md  Object-Oriented Programming.md  Outline.md
(+60 files in other folders)
