[package]
name = "ph"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-tui = "7.0.0"
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
ratatui = { version = "0.29.0", features = ["all-widgets", "serde", "scrolling-regions", "macros", "palette"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
which = "7.0.2"

[lints.rust]
dead_code = "allow"