[package]
name = "ph"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
cursive = { version = "0.21.1", default-features = false, features = ["crossterm-backend"] }
lru = "0.16.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8.1"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
which = "7.0.2"

[lints.rust]
dead_code = "allow"
